added fragment referring to potential smc bias to end of methods

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -1700,7 +1700,9 @@ be homogeneous across some distance of the genome.
 This problem similarly arises in a single population model,
 where \citet{deng_distribution_2021} have previously
 demonstrated that its effect can likely be ignored. We 
-re-examine this potential bias with respect to the presence
+re-examine this potential bias, 
+as well as any potential bias due to using the SMC' approximation,
+with respect to the presence
 of population structure in our validations in the Supplementary Information.
 
 % This is because the product of $L(\mathcal{G})$ and 
