aesthetic on single sentence

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2381,7 +2381,7 @@ model that generated it.
 %Rather than inferring the species tree model, many modern genomic methods aim to 
 %These  methods aim to 
 %infer ARGs analyzing local patterns along the genome.
-In phylogenetics, the goal of ARG inference 
+The ultimate goal of ARG inference in phylogenomic or population genomic studies
 is often to detect signals of introgression or selection. 
 However, even in the case of a neutral coalescent process 
 with constant effective population sizes and with a constant recombination rate 
