added highlighted callout to line about spatial variance in discussion. Need to expand on this a bit

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2387,7 +2387,8 @@ However, even in the case of a neutral coalescent process
 with constant effective population sizes and with a constant recombination rate 
 across the span of a genome, highly structured demographic models can exhibit
 high spatial variance in the expected waiting distances until genealogical 
-topology changes (e.g. Fig.~\ref{fig:fig-validation}). 
+topology changes \hl{(e.g. Fig.~\ref{fig:fig-validation}) --- actually this might not be a good example of 
+\emph{spatial} variance in the \emph{expected} waiting distances}. 
 Until now, there has been no analytical approach for generating a null hypothesis 
 concerning the expected length of regions spanned by a single genealogical topology under absolute neutrality.
 Our results allow us to calculate these expectations and to probe null hypotheses concerning the probability 
